[package]
name = "ethereum-event-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.48"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
actix-http = "3.4.0"
async-trait = "0.1.74"
actix-rt = "2.9.0"
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["ws"] }
eyre = "0.6.10"
